修改换行问题

--- a/正则获取主域名.md
+++ b/正则获取主域名.md
@@ -5,7 +5,17 @@ tags:
 ---
 ## 域名匹配 
 ```
-preg_match('/[\w][\w-]*\.(?:com\.cn|net\.cn|gov\.cn|ac\.cn|com|cn|co|net|org|gov|info|xyz|name|mobi|wang|top|xin|shop|ltd|cc|club|vip|ink|fun|online|tech|store|red|pro|group|work|ren|biz|site|tv|wiki|design|live|pub)(\/|$)/isU'
+preg_match('/[\w][\w-]*\.
+(?:com
+\.cn|net\.cn|gov\.cn
+|ac\.cn|com|cn|co|net
+|org|gov|info|xyz|name
+|mobi|wang|top|xin|shop
+|ltd|cc|club|vip|ink
+|fun|online|tech|store
+|red|pro|group|work
+|ren|biz|site|tv|wiki
+|design|live|pub)(\/|$)/isU'
 , "www.baidu.info/index.php", $domain);
 
 $domain = !empty($domain[0]) ? $domain[0] : '';
